Added tmux-resurrect plugin to persist sessions across reboot Set up bind keys for preserving wotking directory while creating new panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,3 +6,10 @@ set -g default-terminal screen-256color
 
 # Change to 12 hour time format in statusline
 set -g status-right "%A, %d %b %Y %I:%M %p"
+
+# Install tmux-resurrect from source
+run-shell ~/.tmux/
+
+# Preserve working directory when creating new pane
+bind '%' split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
