Bug fix for tmux-resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal screen-256color
 set -g status-right "%A, %d %b %Y %I:%M %p"
 
 # Install tmux-resurrect from source
-run-shell ~/.tmux/
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
 
 # Preserve working directory when creating new pane
 bind '%' split-window -h -c "#{pane_current_path}"
