Moved to tpm for installing plugin instead of messy git clones

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,11 +5,15 @@ set -g mouse on
 set -g default-terminal screen-256color
 
 # Change to 12 hour time format in statusline
-set -g status-right "%A, %d %b %Y %I:%M %p"
+set -g status-right "#{?client_prefix,#[reverse]<C-b>#[noreverse] ,} %A, %d %b %Y %I:%M %p"
 
-# Install tmux-resurrect from source
-run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+# Install plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Preserve working directory when creating new pane
 bind '%' split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
+
+# Center the window list
+set -g status-justify centre
