Set up gruvbox theme for the statusbar and did some tweakings to get a custom statusbar

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,9 +4,6 @@ set -g mouse on
 # Enable 256 color mode support
 set -g default-terminal screen-256color
 
-# Change to 12 hour time format in statusline
-set -g status-right "#{?client_prefix,#[reverse]<C-b>#[noreverse] ,} %A, %d %b %Y %I:%M %p"
-
 # Install plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -15,5 +12,5 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 bind '%' split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 
-# Center the window list
-set -g status-justify centre
+# Apply gruvbox theme
+source-file ~/.tmux/gruvbox.conf
