Configured key bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,9 +8,13 @@ set -g default-terminal screen-256color
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Preserve working directory when creating new pane
-bind '%' split-window -h -c "#{pane_current_path}"
-bind '"' split-window -v -c "#{pane_current_path}"
-
 # Apply gruvbox theme
 source-file ~/.tmux/gruvbox.conf
+
+# Refer https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+# Preserve working directory when creating new pane
+bind '|' split-window -h -c "#{pane_current_path}"
+bind '-' split-window -v -c "#{pane_current_path}"
+
+# Easy config reloads
+bind r source-file ~/.tmux.conf
