feat #2: Add a prefix key indicator
Split long status-right definition line into multiple lines with
variables.

--- a/gruvbox.conf
+++ b/gruvbox.conf
@@ -45,7 +45,23 @@ set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
-set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %a, %d %b %Y  %I:%M %p #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
+
+# Add an indicator to tell when prefix key is pressed
+# https://stackoverflow.com/questions/12003726/give-a-hint-when-press-prefix-key-in-tmux
+# https://github.com/tmux-plugins/tmux-prefix-highlight/blob/master/prefix_highlight.tmux
+prefix_highlight="#[fg=colour237]#[bg=colour248]"
+prefix_indicator_text="^b"
+separator1_highlight_noprefix="#[fg=colour239]#[bg=colour237]#[nobold]#[nounderscore]#[noitalics]"
+separator1_highlight_prefix="#[fg=colour239]#[bg=colour248]#[nobold]#[nounderscore]#[noitalics]"
+separator1_highlight="#{?client_prefix,$separator1_highlight_prefix,$separator1_highlight_noprefix}"
+separator_3_highlight="#[fg=colour248]#[bg=colour237]#[nobold]#[noitalics]#[nounderscore]"
+prefix_key_indicator="#{?client_prefix,$separator_3_highlight"$prefix_highlight$prefix_indicator_text",}"
+date_time_highlight="#[fg=colour246,bg=colour239]"
+date_format="%a, %d %b %Y"
+time_format="%I:%M %p"
+separator_2_highlight="#[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]"
+hostname_highlight="#[fg=colour237, bg=colour248]"
+set-option -g status-right "$prefix_key_indicator$separator1_highlight$date_time_highlight $date_format  $time_format $separator_2_highlight$hostname_highlight #h "
 
 set-window-option -g window-status-current-format "#[fg=colour237, bg=colour214, nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
 set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
