Fix ctrl+b sticky behavior when switching panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,3 +18,8 @@ bind '-' split-window -v -c "#{pane_current_path}"
 
 # Easy config reloads
 bind r source-file ~/.tmux.conf
+
+# Refer https://superuser.com/questions/325110/how-to-turn-down-the-timeout-between-prefix-key-and-command-key-in-tmux
+# Get rid of the annoying sticky ctrl+b when navigating fast between panes, once I change panes, I want the ctrl+b to be deactivated
+set-option -g repeat-time 100 # 100 millisecond
+
